--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/headers/headers.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/headers/headers.component.html
@@ -1,5 +1,4 @@
-
-
+<html lang="en">
 <nav>
   <header class="py-4">
     <div class="container mx-auto flex justify-between items-center" style=left:50px;>
@@ -55,3 +54,4 @@
     </div>
   </header>
 </nav>
+</html>
