--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/list/list.component.css
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/list/list.component.css
@@ -1,10 +1,3 @@
 #list-hover:hover{
-    background-color: #3b82f6;
-    color: white;
-    
-}
-#list-hover:hover #hover-change{
-    /* font-size: x-large; */
-    color: white;
-    background-color:#3b82f6;
+    background-color: #f3f4f6; 
 }
