--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/login/login.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/login/login.component.html
@@ -66,5 +66,14 @@
       <div class="circle"></div>
     </div>
   </div>
-
+  <!-- OTP Modal -->
+  <div *ngIf="otpModalVisible" class="otp-modal">
+    <div class="otp-modal-content">
+      <h3>Enter OTP</h3>
+      <input type="text" maxlength="5" [(ngModel)]="otpCode" placeholder="Enter 5-digit OTP" />
+      <button class="submit" (click)="verifyOtp()">Submit</button>
+      <button class="cancel" (click)="closeOtpModal()">Cancel</button>
+    </div>
+  </div>
+  
 </body>
