--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentordashboard/mentordashboard.component.css
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentordashboard/mentordashboard.component.css
@@ -1,1 +1,20 @@
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
 
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+#dashboard-menu:hover {
+  transform: translate(-1.5%, -1.5%);
+  transition: transform 0.45s;
+}
+
+#table-div {
+  margin-bottom: 10px;
+}
