--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/view-task/view-task.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/view-task/view-task.component.html
@@ -122,7 +122,7 @@
             <th scope="col" class="py-2 px-4 text-white">Start</th>
             <th scope="col" class="py-2 px-4 text-white">End</th>
             <th scope="col" class="py-2 px-4 text-white">Status</th>
-            <th scope="col" class="py-2 px-4 text-white" *ngIf="isMentor">Delete</th>
+            <!-- <th scope="col" class="py-2 px-4 text-white" *ngIf="isMentor">Delete</th> -->
           </tr>
         </thead>
          <tbody class="items-center">
@@ -132,7 +132,7 @@
             <td class="py-2 px-4">{{tasks.start}}</td>
             <td class="py-2 px-4">{{tasks.end}}</td>
             <td class="py-2 px-2"><div class="hover:bg-slate-950 p-1 border-2 border-orange-200 bg-white rounded-lg items-center text-center text-base  text-[#E46A11] font-bold"><u>{{tasks.status}}</u></div></td>
-            <td class="py-2 px-2" *ngIf="isMentor"><button class="btn btn-primary" (click)="openTaskDetete(tasks.id)" >Delete</button></td>
+            <!-- <td class="py-2 px-2" *ngIf="isMentor"><button class="btn btn-primary" (click)="openTaskDetete(tasks.id)" >Delete</button></td> -->
           </tr>
          </tbody>
         </table>
