--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/end-internship-dialog/end-internship-dialog.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/end-internship-dialog/end-internship-dialog.component.html
@@ -2,6 +2,22 @@
   <p>{{ data.message }}</p>
 </div>
 <div mat-dialog-actions>
+  <form action="">
+    <label for="presentation">
+      Select your final presentation
+    </label>
+    <input type="file" name="presentation" id="presentation" accept=".pdf" />
+    <label for="presentation">
+      Select your final report
+    </label>
+    <input type="file" name="presentation" id="presentation" accept=".pdf" />
+    <label for="presentation">
+      Select your final presentation
+    </label>
+    <input type="link" name="presentation" id="presentation" accept=".pdf" />
+    
+  </form>
+
   <button mat-button [mat-dialog-close]="true">Close</button>
-  <button mat-button (click)="onSubmit()">Save</button>
+  <button mat-button (click)="onSubmit()">Upload</button>
 </div>
