--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/internprofile/internprofile.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/internprofile/internprofile.component.html
@@ -42,6 +42,7 @@
             padding-top: 10px;
             padding-bottom: 10px;
         }
+
         /* Additional style for progress bar */
         .progress {
             height: 0.5rem;
@@ -163,17 +164,18 @@
             margin-bottom: 0.5rem;
         }
 
-        #close-button{
+        #close-button {
             padding-left: auto;
             align-items: right !important;
         }
     </style>
 </head>
+
 <body class="">
     <div class="flex justify-end">
-        <button  (click)="closeDialog()"
-               class="font-bold rounded-lg text-lg px-4 py-1.5 text-center mt-2 mr-2 text-black bg-slate-300">
-                X
+        <button (click)="closeDialog()"
+            class="font-bold rounded-lg text-lg px-4 py-1.5 text-center mt-2 mr-2 text-black bg-slate-300">
+            X
         </button>
     </div>
     <div class="container mx-auto mt-2">
@@ -216,58 +218,39 @@
                 <div class="mentor-details"><strong>Association: </strong>{{ internProfile.association }}</div>
             </div>
             <form [formGroup]="uploadDocument" (ngSubmit)="upload()">
-            <div *ngIf="isintern" class=" mt-2 grid-item border outline-dashed outline-2 outline-offset-1">
-                <h3 class="section-title"><u>Upload Document</u></h3>
-                <div class="flex w-full">
-                <div class="flex  mr-auto">
-                <div class="flex items-center justify-center">
-                    <input
-                        formControlName="inputfile"
-                        type="file"
-                        class="
+                <div *ngIf="isintern" class=" mt-2 grid-item border outline-dashed outline-2 outline-offset-1">
+                    <h3 class="section-title"><u>Upload Document</u></h3>
+                    <div class="flex w-full">
+                        <div class="flex  mr-auto">
+                            <div class="flex items-center justify-center">
+                                <input formControlName="inputfile" type="file" class="
                             block text-sm w-[240px] text-slate-500
                             file:mr-2 file:py-2 file:px-2
                             file:rounded-full file:border-0
                             file:text-sm file:font-bold
                             file:bg-violet-200 file:text-violet-700
                             hover:file:bg-violet-500 hover:file:text-white
-                            py-2"
-                    />
+                            py-2" />
+                            </div>
+                            <div class="form-text text-danger -ml-3"
+                                *ngIf="inputfile.errors?.['required'] && (inputfile.touched)">
+                                *
+                            </div>
+                        </div>
+                        <div class="flex justify-end px-3 py-2">
+                            <button
+                                class="flex justify-end bg-[#5C59E8] hover:bg-blue-700 font-semibold rounded-lg px-4 py-1 text-white">
+                                Submit
+                            </button>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-text text-danger -ml-3" *ngIf="inputfile.errors?.['required'] && (inputfile.touched)">
-                    *
-                </div>
-                </div>
-                <div class="flex justify-end px-3 py-2">
-                    <button class="flex justify-end bg-[#5C59E8] hover:bg-blue-700 font-semibold rounded-lg px-4 py-1 text-white">
-                      Submit
-                    </button>
-                </div>
-                </div>
-            </div>
             </form>
-            <div *ngIf="isMentor && uploadedFiles.length > 0" class=" mt-2 grid-item border outline-dashed outline-2 outline-offset-1">
-                <h3 class="section-title"><u>Uploaded Document</u></h3>
-                <table class="w-full border-2 ">
-                    <thead class="w-1/2 border">
-                        <th class="text-center font-bold py-2">Document</th>
-                        <th class="text-center font-bold py-2">Submitted On</th>
-                    </thead>
-                    <tbody class="w-1/2">
-                    <tr *ngFor="let files of uploadedFiles" class="">
-                        <td class="w-1/2 text-center py-2"><a><u>{{files.docname}}</u></a></td>
-                        <td class="w-1/2 text-center py-2">{{files.date}}</td>
-                    </tr>
-                    </tbody>
-                </table>
-                <div class="mt-3 items-center border-2 p-2">
-                    <div class="text-xl font-bold "><u>Close Internship and trigger mails <mat-icon>question_mark</mat-icon></u></div>
-                    <button (click)="closeInternship(this.internProfile.id)" class=" items-center mt-3 font-bold rounded-lg text-lg px-4 py-1 text-center text-white bg-gradient-to-r from-yellow-500 via-yellow-600 to-yellow-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-yellow-300 dark:focus:ring-yellow-800 shadow-lg shadow-yellow-500/50 dark:shadow-lg dark:shadow-yellow-800/80">Close Internship</button>
-                    
-                </div>
-            </div>
+
+
         </div>
     </div>
 
 </body>
+
 </html>
