--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentordashboard/mentordashboard.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentordashboard/mentordashboard.component.html
@@ -71,7 +71,7 @@
               <th scope="col" class="py-4 px-4 text-white">Full Name</th>
               <th scope="col" class="py-4 px-4 text-white">End Date</th>
               <th scope="col" class="py-4 px-4 text-white">Association</th>
-              <th scope="col" class="py-4 px-4 text-white">View Task</th>
+              <!-- <th scope="col" class="py-4 px-4 text-white">View Task</th> -->
               <!-- <th scope="col" class="py-4 px-4 text-white">Update</th> -->
               <th scope="col" class="py-4 px-4 text-white">Uploads</th>
             </tr>
