--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/end-internship-dialog/end-internship-dialog.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/end-internship-dialog/end-internship-dialog.component.html
@@ -53,7 +53,11 @@
     <mat-error *ngIf="fileMapping.txt.errorMessage">{{ fileMapping.txt.errorMessage }}</mat-error>
   </div>
 </div>
+    <!-- Loading Indicator -->
+    <div *ngIf="isLoading" class="loading-indicator">Uploading files, please wait...</div>
 
+    <!-- Success Message -->
+    <div *ngIf="isSuccess" class="success-message">Files uploaded successfully!</div>
 <div mat-dialog-actions class="dialog-actions">
   <button mat-button class="close-button" [mat-dialog-close]="true">Close</button>
   <button
