--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/addmentor/addmentor.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/addmentor/addmentor.component.html
@@ -54,20 +54,21 @@
         </div>
         <nav>
           <ul class="flex space-x-4 text-black">
-            <li>
+            <!-- <li>
               <a>
                 <h2 class="text-black font-bold py-2 px-4 rounded mt-4">{{roledesc}}</h2>
               </a>
-            </li>
+            </li> -->
             <li id="Add_Mentor"><button type="button"
-                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-5"
                 (click)="goToPage('inactive')">Past Interns</button></li>
             <li id="Add_Mentor"><button type="button"
-                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-5"
                 (click)="goToPage('mentorlist')">Mentor List</button></li>
-            <li id="Add_Mentor"><button type="button"
+            <!-- <li id="Add_Mentor"><button type="button"
                 class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4"
-                (click)="logout()">Logout</button></li>
+                (click)="logout()">Logout</button></li> -->
+            <app-dropdown [roledesc]="roledesc"></app-dropdown>
           </ul>
         </nav>
       </div>
