--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/interndashboard/interndashboard.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/interndashboard/interndashboard.component.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head class>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Relntern Manager</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <img class="mx-auto md:h-16 h-12 w-auto"
+  src="https://1000logos.net/wp-content/uploads/2021/08/Reliance-Industries-Limited-RIL-Logo-500x314.jpg"
+  alt="Your Company"/>
 </head>
 
 <body id="body" class="md:px-6 h-auto bg-white">
@@ -20,20 +21,25 @@
             alt="Your Company">
         </div>
         <div class="flex items-center justify-center space-x-1 text-black relative">
-
           <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
             <li>
-              <a (click)="openProfile(internDetails)"
-                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">My details</a>
+              <!-- <button type="button" [ngClass]="{
+                    'bg-blue-500 hover:bg-blue-700': true
+                  }" class="text-white font-bold py-2 px-4 rounded mt-5" (click)="openProfile(internDetails)">
+                My Details
+              </button> -->
+              <i class="far fa-user-circle mt-5" style="font-size: 35px; cursor: pointer;" (click)="openProfile(internDetails)"></i>
             </li>
           </ul>
-          <div class="py-1">
-            <a (click)="logout()"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
-              out</a>
-          </div>      
+        
+          <!-- <div class="ml-4">
+            <i class="fas fa-sign-out-alt py-0.5 px-1 mt-5 text-red-700 hover:text-red-800 cursor-pointer"
+              style="font-size: 35px;" alt="Logout" (click)="logout()" title="Logout"></i>
+          </div> -->
+          <li id="Add_Mentor"><button type="button"
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-5"
+            (click)="logout()">Logout</button></li>
         </div>
-
       </div>
     </header>
   </nav>
